--- a/SwissArmyKnife/manifest.json
+++ b/SwissArmyKnife/manifest.json
@@ -1,12 +1,12 @@
 ﻿{
   "Name": "Swiss Army Knife",
   "Author": "John Peters (you know, the farmer?)",
-  "Version": "1.0.1",
+  "Version": "1.1.0",
   "Description": "Adds a tool to emulate keyboard input.",
   "UniqueID": "JohnPeters.SwissArmyKnife",
   "EntryDll": "SwissArmyKnife.dll",
   "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": [ "Nexus:???" ],
+  "UpdateKeys": [ "Nexus:13991" ],
   "Dependencies": [
     {
       "UniqueID": "spacechase0.SpaceCore",
